<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.rikki.musicnow.ui.home.HomeFragment"
        android:label="@string/drawer_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_pic"
            app:destination="@id/nav_picture"/>
        <action
            android:id="@+id/action_home_to_music"
            app:destination="@id/nav_music"/>
        <action
            android:id="@+id/action_home_to_video"
            app:destination="@id/nav_video"/>
    </fragment>

    <fragment
        android:id="@+id/nav_picture"
        android:name="com.example.rikki.musicnow.ui.home.PictureFragment"
        android:label="@string/drawer_pic"
        tools:layout="@layout/fragment_picture">
        <action
            android:id="@+id/action_picture_to_detail"
            app:destination="@id/nav_picture_detail"/>
    </fragment>

    <fragment
        android:id="@+id/nav_picture_detail"
        android:name="com.example.rikki.musicnow.ui.home.PictureDetailFragment"
        android:label="@string/drawer_pic"
        tools:layout="@layout/fragment_picture_detail"/>

    <fragment
        android:id="@+id/nav_music"
        android:name="com.example.rikki.musicnow.ui.home.MusicFragment"
        android:label="@string/drawer_music"
        tools:layout="@layout/fragment_music">
        <action
            android:id="@+id/action_music_to_detail"
            app:destination="@id/nav_music_detail"/>
    </fragment>

    <fragment
        android:id="@+id/nav_music_detail"
        android:name="com.example.rikki.musicnow.ui.home.MusicDetailFragment"
        android:label="@string/drawer_music"
        tools:layout="@layout/fragment_music_detail"/>

    <fragment
        android:id="@+id/nav_video"
        android:name="com.example.rikki.musicnow.ui.home.VideoFragment"
        android:label="@string/drawer_video"
        tools:layout="@layout/fragment_video">

    </fragment>

    <include app:graph="@navigation/login_navigation"/>

    <fragment
        android:id="@+id/nav_reset"
        android:name="com.example.rikki.musicnow.ui.login.ResetFragment"
        android:label="@string/button_reset"
        tools:layout="@layout/fragment_reset">
        <action
            android:id="@+id/action_reset_to_login"
            app:destination="@id/login_navigation"/>
    </fragment>
</navigation>