<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/white"
    tools:context=".ui.login.LoginFragment">

    <TextView
        android:id="@+id/signInTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/title_signin"
        style="@style/TitleTextViewStyle"
        android:textAlignment="viewStart"/>

    <TextView
        android:id="@+id/signInSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/signInTitle"
        android:text="@string/subtitle_signin"
        style="@style/SubtitleTextViewStyle"
        android:textAlignment="viewStart"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/signInSubtitle"
        android:layout_marginTop="30dp"
        android:hint="@string/hint_phone"
        app:hintEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:textAlignment="viewStart" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/input1"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_password"
        app:endIconMode="password_toggle">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:textAlignment="viewStart"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signInBtn"
        android:text="@string/button_signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/input2"
        android:layout_marginTop="15dp"
        android:textAllCaps="false"
        android:textStyle="normal|bold"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/resetBtn"
        android:text="@string/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/signInBtn"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@android:color/transparent"
        android:textStyle="normal|bold"
        android:textAllCaps="false"
        android:textColor="@color/purple_500" />

    <Button
        android:id="@+id/registerBtn"
        android:text="@string/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/signInBtn"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@android:color/transparent"
        android:textStyle="normal|bold"
        android:textAllCaps="false"
        android:textColor="@color/purple_500" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/resetBtn"
        android:layout_marginTop="15dp"
        app:srcCompat="@drawable/line"
        android:adjustViewBounds="true"/>

</androidx.constraintlayout.widget.ConstraintLayout>